# fh2024_backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_api.py
app/: app.py  logconfig.py  test.css  test_css.txt
app/firebase_config/: firebase_cred.json
app/main/: data_handlers.py  git.py  routes.py  settings.py  types.py  vector_handlers.py
fastapi-env/: pyvenv.cfg
